...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dnI-ai-9ac" userLabel="End Editing">
                                <rect key="frame" x="16" y="20" width="343" height="305.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="endEditingButton"/>
                                <connections>
                                    <action selector="endEditing:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vMI-r2-AW4"/>
...
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aIz-ZX-Kks">
                                                <rect key="frame" x="57.5" y="0.0" width="50" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="PeaBagsField"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z32-2O-1RW">
                                                <rect key="frame" x="57.5" y="0.0" width="50" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="EggDozensField"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TqC-Eg-EF5">
                                                <rect key="frame" x="57.5" y="0.0" width="50" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="MilkBottlesField"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G7D-hA-DpU">
                                                <rect key="frame" x="57.5" y="0.0" width="50" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="BeanCansField"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="50" id="iVc-XW-tFe"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LDU-fx-sdk">
                                <rect key="frame" x="154.5" y="333.5" width="66" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="CheckoutButton"/>
                                <state key="normal" title="Checkout"/>
                                <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oLK-8G-gA9">
                                <rect key="frame" x="115" y="605" width="190" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackToBasketButton"/>
                                <state key="normal" title="Back to basket composition"/>
                                <connections>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EEh-P2-6Q7">
                                <rect key="frame" x="174" y="205.5" width="42" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="dollarAmount"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="initializing rates" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SO3-NU-hwg">
                                        <rect key="frame" x="0.0" y="0.0" width="180" height="20.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="RateLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YrC-89-K8p">
                                        <rect key="frame" x="0.0" y="81" width="180" height="20.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="convertedAmount"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
...
